Mon Apr 23 03:40:35 GMT 2012  Olly Betts <olly@survex.com>

	* common/filetests.h: Add new function file_size() to get the size
	  of a file from a path or file descriptor.
	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc,
	  net/remoteconnection.cc,tests/api_replicate.cc: Use this new
	  function.

Wed Apr 18 01:35:21 GMT 2012  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc,weight/tradweight.cc: Fix comment typo.

Wed Apr 11 08:26:42 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: Update section on patches to mention git (git diff and git
	  format-patch), and using "-r" with normal diff, and also that
	  ptardiff offers a nice way to diff against an unpacked tarball.

Wed Apr 04 02:22:04 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc:
	  If the output database is empty, don't write a metainfo tag out.
	  Take care not to divide by zero when computing the percentage
	  size change for a table.
	* tests/api_compact.cc: Add new testcase compactempty1 to provide
	  regression tests.

Wed Apr 04 01:48:34 GMT 2012  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: If the database couldn't be opened, don't try
	  to reserve space for cross-checking doclens, as that just results in
	  us reporting a confusing warning about there being too many documents
	  to cross-check doclens.

Fri Mar 30 22:23:53 GMT 2012  Olly Betts <olly@survex.com>

	* backends/document.h: "An string" -> "A string" in internal doc
	  comment.

Fri Mar 30 22:20:11 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Fix switched lower and upper in doc comments
	  for Weight methods get_doclength_lower_bound() and
	  get_doclength_upper_bound().  Correct maximum to minimum in
	  get_doclength_lower_bound() comment and note that this excludes zero
	  length documents.  Fix "An lower" to "A lower".

Wed Mar 28 09:54:33 GMT 2012  Olly Betts <olly@survex.com>
