@@ -992,6 +992,21 @@ const int DBCHECK_SHOW_BITMAP = 4;
  */
 const int DBCHECK_SHOW_STATS = 8;
 
+/** Fix problems.
+ *
+ *  Currently this is supported for chert, and will:
+ *
+ *    * regenerate the "iamchert" file if it isn't valid (so if it is lost, you
+ *      can just create it empty and then "fix problems").
+ *
+ *    * regenerate base files (currently the algorithm for finding the root
+ *      block may not work if there was a change partly written but not
+ *      committed).
+ *
+ *  For use with Xapian::Database::check().
+ */
+const int DBCHECK_FIX = 16;
+
 }
 
 #endif /* XAPIAN_INCLUDED_DATABASE_H */
